--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body style="background-color: black;">
     <div class="play">
-      <p>LET'S GAME</p>
+      <p>LET'S PLAY</p>
     </div>
   </body>
   <script>
