--- a/HTML/game.html
+++ b/HTML/game.html
@@ -39,5 +39,5 @@
       </button>
     </div>
   </body>
-  <script src="../javascript/guessWord.js"></script>
+  <script src="../JAVASCRIPT/guessWord.js"></script>
 </html>
