--- a/HTML/game.html
+++ b/HTML/game.html
@@ -23,11 +23,11 @@
     <div class="body">
       <div class="head">
         <h1>Set the word</h1>
-        <input type="text" class="headAns" />
+        <input type="text" class="headAns" placeholder="type here . . ." />
       </div>
       <div class="guess invisible">
         <h1>Guess the word</h1>
-        <input type="text" class="guessAns" />
+        <input type="text" class="guessAns" placeholder="type here . . ." />
       </div>
     </div>
     <div class="butt">
