--- a/HTML/won.html
+++ b/HTML/won.html
@@ -12,7 +12,7 @@
         z-index: -1;
         background-repeat:no-repeat;
         background-size: cover;
-        position:static;
+        /* position:static; */
       }
     </style>
   </head>
@@ -21,9 +21,8 @@
       <p>Play Again</p>
     </div>
     <div class="you-won">
-        <p>You Won</p>
-      </div>
-    
+      <p>You Won!!!</p>
+    </div>
   </body>
   <script>
     let play = document.querySelector(".playAgain");
